name:       strict-containers
version:    0.4.3.2
license:    BSD3
license-file:    LICENSE
maintainer:    code@silk.co
synopsis:   Assorted concrete value-strict container types
category:   Data Structures
description:
        This package contains efficient general-purpose implementations
        of various basic immutable container types.  The declared cost of
        each operation is either worst-case or amortized, but remains
        valid even if structures are shared.

        This fork makes sure all containers are value-strict.
build-type: Simple
cabal-version:  >=1.6
extra-source-files: include/Typeable.h

source-repository head
    type:     darcs
    location: http://darcs.haskell.org/packages/containers/

Library {
    build-depends: base >= 4.2 && < 4.9, array, containers >= 0.5 && < 0.6, deepseq >= 1.1 && < 1.5
    ghc-options: -O2
    if impl(ghc>6.10)
        Ghc-Options: -fregs-graph
    include-dirs: include
    extensions: CPP
    if !impl(nhc98) {
        exposed-modules:
            Data.Sequence.Strict
    }
    if impl(ghc) {
        extensions: DeriveDataTypeable, MagicHash, Rank2Types
    }
}

